stlib.mli.mustache: use custom delims to avoid ocamldoc clash

--- a/stdlib/stdlib.mli.mustache
+++ b/stdlib/stdlib.mli.mustache
@@ -14,7 +14,7 @@
 (**************************************************************************)
 
 (** The OCaml Standard library.
-
+{{=<% %>=}}
     This module is automatically opened at the beginning of each
     compilation. All components of this module can therefore be
     referred by their short name, without prefixing them by [Stdlib].
@@ -22,7 +22,8 @@
     In particular, it provides the basic operations over the built-in
     types (numbers, booleans, byte sequences, strings, exceptions,
     references, lists, arrays, input-output channels, ...) and the
-    standard library modules.
+    {{!modules}standard library modules}.
+<%={{ }}=%>
 *)
 
 (** {1 Exceptions} *)
