--- a/config/config_build.ml.mustache
+++ b/config/config_build.ml.mustache
@@ -18,21 +18,9 @@
 (* This file is included in config_main.ml during the build rather
    than compiled on its own *)
 
-let bindir = {|{BINDIR}|}
-
-let standard_library_default = {|{STDLIB}|}
-
-let ccomp_type = {@QS@|@ccomptype@|@QS@}
-let c_compiler = {@QS@|@CC@|@QS@}
-let c_output_obj = {@QS@|@outputobj@|@QS@}
 let c_has_debug_prefix_map = @cc_has_debug_prefix_map@
 let as_has_debug_prefix_map = @as_has_debug_prefix_map@
-let ocamlc_cflags = {@QS@|@ocamlc_cflags@|@QS@}
-let ocamlc_cppflags = {@QS@|@ocamlc_cppflags@|@QS@}
-(* #7678: ocamlopt uses these only to compile .c files, and the behaviour for
-          the two drivers should be identical. *)
-let ocamlopt_cflags = {@QS@|@ocamlc_cflags@|@QS@}
-let ocamlopt_cppflags = {@QS@|@ocamlc_cppflags@|@QS@}
+
 let bytecomp_c_libraries = {@QS@|@bytecclibs@|@QS@}
 (* bytecomp_c_compiler and native_c_compiler have been supported for a
    long time and are retained for backwards compatibility.
@@ -40,66 +28,41 @@ let bytecomp_c_libraries = {@QS@|@bytecclibs@|@QS@}
    the recommended approach is to use the constituent variables
    c_compiler, ocamlc_cflags, ocamlc_cppflags etc., directly.
 *)
-let bytecomp_c_compiler =
-  c_compiler ^ " " ^ ocamlc_cflags ^ " " ^ ocamlc_cppflags
-let native_c_compiler =
-  c_compiler ^ " " ^ ocamlopt_cflags ^ " " ^ ocamlopt_cppflags
-let native_c_libraries = {@QS@|@nativecclibs@|@QS@}
-let native_pack_linker = {@QS@|@PACKLD@|@QS@}
-let default_rpath = {@QS@|@rpath@|@QS@}
-let mksharedlibrpath = {@QS@|@mksharedlibrpath@|@QS@}
-let ar = {@QS@|@AR@|@QS@}
-let supports_shared_libraries = @supports_shared_libraries@
-let mkdll, mkexe, mkmaindll =
-  if Sys.win32 || Sys.cygwin && supports_shared_libraries then
-    let flexlink =
-      let flexlink =
-        Option.value ~default:"flexlink" (Sys.getenv_opt "OCAML_FLEXLINK")
-      in
-      let f i =
-        let c = flexlink.[i] in
-        if c = '/' && Sys.win32 then '\\' else c
-      in
-      String.init (String.length flexlink) f
-    in
-    let flexdll_chain = {@QS@|@flexdll_chain@|@QS@} in
-    let flexlink_flags = {@QS@|@flexlink_flags@|@QS@} in
-    let flags = " -chain " ^ flexdll_chain ^ " " ^ flexlink_flags in
-    flexlink ^ flags ^ {@QS@|@mkdll_ldflags_exp@|@QS@},
-    flexlink ^ " -exe" ^ flags
-      ^ {@QS@| @mkexe_extra_flags@|@QS@} ^ {@QS@|@mkexe_ldflags_exp@|@QS@},
-    flexlink ^ " -maindll" ^ flags ^ {@QS@|@mkdll_ldflags_exp@|@QS@}
-  else
-    {@QS@|@mkdll_exp@|@QS@},
-    {@QS@|@mkexe_exp@|@QS@},
-    {@QS@|@mkmaindll_exp@|@QS@}
 
-let flambda = @flambda@
-let with_flambda_invariants = @flambda_invariants@
-let with_cmm_invariants = @cmm_invariants@
-let windows_unicode = @windows_unicode@ != 0
-let force_instrumented_runtime = @force_instrumented_runtime@
+(*
+  -ffunction-sections controlled by cc_library linkopts, but
+  asmcomp/asmlink.ml contains code that is conditional on it:
+  if !Clflags.function_sections then ...
+  i.e. there's more to it than whether the platform supports it.
+  the Cflags.function_sections flag should be set at build time, not
+  config time. *)
+let function_sections = false
+FUNCTION_SECTIONS = "@function_sections@" == "true"
 
-let flat_float_array = @flat_float_array@
+let afl_instrument = false
+AFL_INSTRUMENT = "@afl@" == "true"
+afl_instrument = "@afl@" == "true"
 
-let function_sections = @function_sections@
-let afl_instrument = @afl@
+FLAT_FLOAT_ARRAY = "@flat_float_array@" == "true"
+flat_float_array = "@flat_float_array@" == "true"
 
-let architecture = {@QS@|@arch@|@QS@}
-let model = {@QS@|@model@|@QS@}
-let system = {@QS@|@system@|@QS@}
-
-let asm = {@QS@|@AS@|@QS@}
-let asm_cfi_supported = @asm_cfi_supported@
 let with_frame_pointers = @frame_pointers@
 let profinfo = @profinfo@
 let profinfo_width = @profinfo_width@
 
-let ext_exe = {@QS@|@exeext@|@QS@}
-let ext_obj = "." ^ {@QS@|@OBJEXT@|@QS@}
-let ext_asm = "." ^ {@QS@|@S@|@QS@}
-let ext_lib = "." ^ {@QS@|@libext@|@QS@}
-let ext_dll = "." ^ {@QS@|@SO@|@QS@}
+# Compile-time option to $(CC) to add a directory to be searched
+# at run-time for shared libraries
+RPATH = "@rpath@"
+let default_rpath = {@QS@|@rpath@|@QS@}
+
+let ext_exe = {||}
+let ext_obj = "." ^ {|o|}
+let ext_asm = "." ^ {|s|}
+let ext_lib = "." ^ {|a|}
+let ext_dll = "." ^ {|so|}
+
+let host = {|x86_64-apple-darwin22.1.0|}
+let target = {|x86_64-apple-darwin22.1.0|}
 
 let host = {@QS@|@host@|@QS@}
 let target = {@QS@|@target@|@QS@}
@@ -107,3 +70,26 @@ let target = {@QS@|@target@|@QS@}
 let systhread_supported = @systhread_support@
 
 let flexdll_dirs = [@flexdll_dir@]
+
+### Which libraries to compile and install
+# Currently available:
+#       dynlink           Dynamic linking (bytecode and native)
+#       (win32)unix       Unix system calls
+#       str               Regular expressions and high-level string processing
+#       systhreads        Same as threads, requires POSIX threads
+OTHERLIBRARIES = "@otherlibraries@"
+
+FLAMBDA = "@flambda@" == "true"
+WITH_FLAMBDA_INVARIANTS = "@flambda_invariants@" == "true"
+flambda = "@flambda@" == "true"
+with_flambda_invariants = "@flambda_invariants@" == "true"
+
+WITH_CMM_INVARIANTS = "@cmm_invariants@" == "true"
+with_cmm_invariants = "@cmm_invariants@" == "true"
+
+FORCE_INSTRUMENTED_RUNTIME = "@force_instrumented_runtime@" == "true"
+force_instrumented_runtime = "@force_instrumented_runtime@" == "true"
+
+FORCE_SAFE_STRING = True
+DEFAULT_SAFE_STRING = True
+
