--- a/config/config.ml.mustache
+++ b/config/config.ml.mustache
@@ -41,7 +41,8 @@ let native_c_libraries = {|{{native_c_libs}}|}
 let native_pack_linker = {|{{native_pack_linker}}|}
 let default_rpath = {|{{default_rpath}}|}
 let mkdll= {|{{mkdll}}|}
-let mkexe= {|{{{mkexe}}}|}
+let config_mkexe= {|{{{mkexe_exp}}}|}
+let mkexe= {|{{{mkexe_cmd}}}|}
 let mkmaindll= {|{{mkmaindll}}|}
 let mksharedlibrpath = {|{{mksharedlibrpath}}|}
 let ar = {|{{ar}}|}
