cc integration; unify target mgmt across rules; merge_json
* ocaml compilers now integrate with Bazel cc toolchain - cmds issued
by ocaml cc driver to assemble and link native code are extracted from
the bazel cc toolchain (using mustache)
* move logic for determining extension (.cmo/cmx etc) and tool (with
or w/o ocamlrun) moved to function, so all rules use the same logic
* it's all hideous but it seems to work

--- a/config/config.ml.mustache
+++ b/config/config.ml.mustache
@@ -62,7 +62,7 @@ let architecture = {|{{architecture}}|}
 let model = {|{{model}}|}
 let system = {|{{system}}|}
 
-let asm = {|{{asm}}|}
+let asm = {|{{{asm}}}|}
 let asm_cfi_supported = {{asm_cfi_supported}}
 let with_frame_pointers = {{with_frame_pointers}}
 let profinfo = {{profinfo}}
